로그인 및 회원가입, jwt토큰 방식 인증절차 기능 추가

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,6 +18,18 @@
         getPosts();
 
     });
+    function login(){
+        $.ajax({
+            type: "POST",
+            url: "/posts",
+            contentType: "application/json",
+            data: JSON.stringify({username : username, password: password}),
+            success: function (response, status, xhr) {
+
+            }
+
+        });
+    }
 
     //     전체 게시글 가져오기
     function writePost() {
